--- a/Depo/Depo/Presentation/UserStories/Settings/Passcode/PasscodeEnter/View/Passcode/PasscodeViewImp.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Passcode/PasscodeEnter/View/Passcode/PasscodeViewImp.xib
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PasscodeViewImp" customModule="LifeboxShared" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PasscodeViewImp" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="passcodeErrorLabel" destination="Ld8-b9-ejs" id="YVb-U8-PCT"/>
                 <outlet property="passcodeInputView" destination="czr-rG-Jde" id="2Fl-IW-56T"/>
@@ -24,7 +23,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="isq-lG-wUK">
                     <rect key="frame" x="0.0" y="0.0" width="210" height="234"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ld8-b9-ejs" customClass="TextInsetsLabel" customModule="LifeboxShared" customModuleProvider="target">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ld8-b9-ejs" customClass="TextInsetsLabel" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="105" y="147.5" width="0.0" height="0.0"/>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                             <nil key="textColor"/>
@@ -38,15 +37,15 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xx-Vi-aUo" customClass="SpringLabel" customModule="LifeboxShared" customModuleProvider="target">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xx-Vi-aUo" customClass="SpringLabel" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="20" y="155.5" width="170" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="czr-rG-Jde" customClass="PasscodeInputView" customModule="LifeboxShared" customModuleProvider="target">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="czr-rG-Jde" customClass="PasscodeInputView" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="25" y="184" width="160" height="50"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="160" id="5oK-NG-Qxa"/>
                                 <constraint firstAttribute="height" constant="50" id="RFx-IS-thL"/>
@@ -70,7 +69,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstItem="czr-rG-Jde" firstAttribute="centerX" secondItem="isq-lG-wUK" secondAttribute="centerX" id="1Qd-vd-J16"/>
                         <constraint firstAttribute="trailing" secondItem="4xx-Vi-aUo" secondAttribute="trailing" constant="20" symbolic="YES" id="4Vm-nV-cqg"/>
@@ -85,7 +84,7 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="isq-lG-wUK" secondAttribute="bottom" id="12X-Dd-yFZ"/>
                 <constraint firstAttribute="trailing" secondItem="isq-lG-wUK" secondAttribute="trailing" id="2W1-mm-6FP"/>
@@ -96,4 +95,9 @@
             <point key="canvasLocation" x="-48" y="-163"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
