--- a/Depo/Depo/Presentation/Cells/PackagesTableViewCell/PackagesTableViewCell.xib
+++ b/Depo/Depo/Presentation/Cells/PackagesTableViewCell/PackagesTableViewCell.xib
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="51" id="1zF-ZV-pzO" customClass="PackagesTableViewCell" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="51" id="1zF-ZV-pzO" customClass="PackagesTableViewCell" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="51"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1zF-ZV-pzO" id="noX-YT-ASg">
@@ -29,6 +30,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" name="primaryBackground"/>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="S5G-Jp-2dC" secondAttribute="bottom" constant="16" id="1xY-vN-bkp"/>
                     <constraint firstItem="b6e-T2-bNs" firstAttribute="top" secondItem="noX-YT-ASg" secondAttribute="top" constant="16" id="3Ws-EG-QoB"/>
@@ -39,6 +41,7 @@
                     <constraint firstItem="b6e-T2-bNs" firstAttribute="leading" secondItem="noX-YT-ASg" secondAttribute="leading" constant="16" id="lMc-8H-znk"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" name="primaryBackground"/>
             <connections>
                 <outlet property="descriptionLabel" destination="S5G-Jp-2dC" id="ghf-Ff-g4k"/>
                 <outlet property="titleLabel" destination="b6e-T2-bNs" id="088-vD-1ln"/>
@@ -46,4 +49,9 @@
             <point key="canvasLocation" x="400.00000000000006" y="73.995535714285708"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
