--- a/Depo/Depo/Presentation/UserStories/Settings/FaceImage/FaceImageViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/FaceImage/FaceImageViewController.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -43,7 +44,7 @@
                             </connections>
                         </switch>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="hp4-RT-NAP" secondAttribute="trailing" id="9g1-Lh-gYK"/>
                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="hp4-RT-NAP" secondAttribute="bottom" id="B7k-yz-5j0"/>
@@ -71,7 +72,7 @@
                             </connections>
                         </switch>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstItem="xcD-4y-ueg" firstAttribute="top" relation="greaterThanOrEqual" secondItem="vcu-gc-WA6" secondAttribute="top" id="4oT-29-p5b"/>
                         <constraint firstItem="WSp-nP-Yha" firstAttribute="top" secondItem="vcu-gc-WA6" secondAttribute="top" id="8ZH-GC-8Nv"/>
@@ -156,7 +157,7 @@
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
                                 <constraint firstItem="zth-QW-h0a" firstAttribute="top" secondItem="HH3-jN-8kF" secondAttribute="top" id="NNa-ua-yDg"/>
                                 <constraint firstItem="zth-QW-h0a" firstAttribute="centerX" secondItem="HH3-jN-8kF" secondAttribute="centerX" id="PrZ-Ow-n2d"/>
@@ -168,7 +169,7 @@
                 </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="cgP-Cu-WBb"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="yKZ-qH-VVG" firstAttribute="leading" secondItem="cgP-Cu-WBb" secondAttribute="leading" constant="20" id="3D6-Vw-nOa"/>
                 <constraint firstItem="BaH-JO-rG7" firstAttribute="top" secondItem="hNw-Pj-QXr" secondAttribute="bottom" constant="10" id="737-Kf-0am"/>
@@ -222,4 +223,9 @@
             </connections>
         </customObject>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
