--- a/Depo/Depo/Presentation/UserStories/Settings/Passcode/PasscodeSettings/View/PasscodeSettingsViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Passcode/PasscodeSettings/View/PasscodeSettingsViewController.xib
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PasscodeSettingsViewController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PasscodeSettingsViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="biometricsErrorLabel" destination="896-SX-PG3" id="lbW-G8-WBt"/>
                 <outlet property="biometricsLabel" destination="ydG-LF-VUl" id="Iit-gq-AIX"/>
@@ -28,20 +27,20 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QzT-aa-nxV" userLabel="Passcode View">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="62"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Passcode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t5W-ve-57f">
-                            <rect key="frame" x="15" y="20" width="75" height="21"/>
+                            <rect key="frame" x="15" y="20.5" width="74" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="INF-fe-wul">
-                            <rect key="frame" x="307" y="15" width="51" height="31"/>
+                            <rect key="frame" x="307" y="15.5" width="51" height="31"/>
                             <connections>
                                 <action selector="actionPasscodeSwitch:" destination="-1" eventType="valueChanged" id="uAW-hW-BAb"/>
                             </connections>
@@ -54,7 +53,7 @@
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="INF-fe-wul" secondAttribute="trailing" constant="19" id="2ac-NA-tni"/>
                         <constraint firstItem="9Qs-x7-22K" firstAttribute="leading" secondItem="QzT-aa-nxV" secondAttribute="leading" constant="15" id="KQ1-vT-g5n"/>
@@ -70,7 +69,7 @@
                     <rect key="frame" x="0.0" y="62" width="375" height="62"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Passcode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5gd-ty-uBV">
-                            <rect key="frame" x="15" y="20" width="138" height="21"/>
+                            <rect key="frame" x="15" y="20.5" width="138" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -85,14 +84,14 @@
                         <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Arrow" translatesAutoresizingMaskIntoConstraints="NO" id="uaD-uF-Kyt">
                             <rect key="frame" x="348" y="25" width="8" height="12"/>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kvZ-mU-80s">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kvZ-mU-80s">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="62"/>
                             <connections>
                                 <action selector="actionChangePasscodeButton:" destination="-1" eventType="touchUpInside" id="wgh-vr-e7d"/>
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="uaD-uF-Kyt" secondAttribute="trailing" constant="19" id="BBK-ME-VOi"/>
                         <constraint firstAttribute="height" constant="62" id="BTs-zU-vCL"/>
@@ -112,7 +111,7 @@
                     <rect key="frame" x="0.0" y="124" width="375" height="81.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enable biometrics" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ydG-LF-VUl">
-                            <rect key="frame" x="15" y="20" width="137" height="21"/>
+                            <rect key="frame" x="15" y="20" width="136" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -137,7 +136,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="4lc-iZ-AQB" secondAttribute="trailing" constant="19" id="7JS-sE-FvI"/>
                         <constraint firstItem="4lc-iZ-AQB" firstAttribute="top" secondItem="52L-4V-mCz" secondAttribute="top" constant="15" id="85j-ne-kFj"/>
@@ -156,7 +155,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="62"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set a Passcode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4jv-WX-EDz">
-                            <rect key="frame" x="15" y="20" width="118" height="21"/>
+                            <rect key="frame" x="15" y="20.5" width="117" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -171,14 +170,14 @@
                         <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Arrow" translatesAutoresizingMaskIntoConstraints="NO" id="hFy-VM-Qq2">
                             <rect key="frame" x="348" y="25" width="8" height="12"/>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KJj-CQ-csX">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="61"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KJj-CQ-csX">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="61.5"/>
                             <connections>
                                 <action selector="actionSetPasscodeButton:" destination="-1" eventType="touchUpInside" id="VLl-NG-3ES"/>
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstItem="KJj-CQ-csX" firstAttribute="leading" secondItem="H6p-r0-aNi" secondAttribute="leading" id="97I-Pc-LX5"/>
                         <constraint firstAttribute="height" constant="62" id="ENF-mx-1v1"/>
@@ -195,7 +194,8 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="I0F-3e-c2i"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="QzT-aa-nxV" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="1C5-4e-4a2"/>
                 <constraint firstAttribute="trailing" secondItem="jMc-IM-6FD" secondAttribute="trailing" id="60I-NH-a5W"/>
@@ -211,11 +211,13 @@
                 <constraint firstItem="jMc-IM-6FD" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="vF3-Bd-tLf"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
-            <viewLayoutGuide key="safeArea" id="I0F-3e-c2i"/>
             <point key="canvasLocation" x="33.5" y="53.5"/>
         </view>
     </objects>
     <resources>
         <image name="Arrow" width="8" height="12"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
