--- a/Depo/Depo/Presentation/UserStories/Settings/PeriodicContactSync/View/PeriodicContactSyncViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/PeriodicContactSync/View/PeriodicContactSyncViewController.xib
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PeriodicContactSyncViewController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PeriodicContactSyncViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="tableView" destination="gRF-2Q-4cg" id="0ZB-hf-bPQ"/>
                 <outlet property="titleLabel" destination="ql2-1I-4FR" id="V7i-5Y-Q3K"/>
@@ -40,7 +39,7 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="597" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gRF-2Q-4cg" customClass="ResizableTableView" customModule="lifebox" customModuleProvider="target">
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="597" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gRF-2Q-4cg" customClass="ResizableTableView" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="70" width="375" height="597"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </tableView>
@@ -57,6 +56,7 @@
                             </constraints>
                         </view>
                     </subviews>
+                    <viewLayoutGuide key="safeArea" id="Ob0-6p-5hn"/>
                     <constraints>
                         <constraint firstItem="JxN-JV-9g7" firstAttribute="top" secondItem="RxB-zU-ZLr" secondAttribute="top" id="0rU-M8-dQo"/>
                         <constraint firstAttribute="bottom" secondItem="JxN-JV-9g7" secondAttribute="bottom" id="64I-Gb-gh8"/>
@@ -65,17 +65,22 @@
                         <constraint firstItem="JxN-JV-9g7" firstAttribute="height" secondItem="RxB-zU-ZLr" secondAttribute="height" priority="250" id="fNT-vr-k6X"/>
                         <constraint firstItem="JxN-JV-9g7" firstAttribute="width" secondItem="RxB-zU-ZLr" secondAttribute="width" id="kyE-5E-pV8"/>
                     </constraints>
-                    <viewLayoutGuide key="safeArea" id="Ob0-6p-5hn"/>
                 </scrollView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="RxB-zU-ZLr" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="08k-ts-pXI"/>
                 <constraint firstItem="RxB-zU-ZLr" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="flD-F1-bFY"/>
                 <constraint firstItem="RxB-zU-ZLr" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="iew-zq-tm4"/>
                 <constraint firstItem="RxB-zU-ZLr" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="y5b-8x-igP"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <point key="canvasLocation" x="138" y="154"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
