--- a/Depo/Depo/Presentation/UserStories/Settings/Permissions/MobilePaymentPermission/View/MobilePaymentPermissionView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Permissions/MobilePaymentPermission/View/MobilePaymentPermissionView.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -77,7 +78,7 @@
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="Xzo-bT-F9o"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="gQF-ge-P27" firstAttribute="centerX" secondItem="B1g-4V-BbR" secondAttribute="centerX" id="0n9-wg-Ppx"/>
                 <constraint firstItem="Xzo-bT-F9o" firstAttribute="trailing" secondItem="gQF-ge-P27" secondAttribute="trailing" constant="40" id="10M-qx-BqM"/>
@@ -99,5 +100,8 @@
     </objects>
     <resources>
         <image name="checkbox" width="18" height="18"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
