--- a/Depo/Depo/Presentation/UserStories/Settings/Settings/Cells/SettingsTableViewSwitchCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Settings/Cells/SettingsTableViewSwitchCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -55,6 +56,7 @@
                         </constraints>
                     </view>
                 </subviews>
+                <color key="backgroundColor" name="primaryBackground"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="DCX-uN-BfP" secondAttribute="trailing" id="9ke-ac-TIH"/>
                     <constraint firstItem="vJT-rR-gVv" firstAttribute="leading" secondItem="YVX-31-fgL" secondAttribute="leading" constant="24" id="I9z-Rw-16X"/>
@@ -74,4 +76,9 @@
             <point key="canvasLocation" x="-95" y="97"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
