--- a/Depo/Depo/Presentation/UserStories/Settings/Settings/Header/SettingHeaderView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Settings/Header/SettingHeaderView.xib
@@ -1,36 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12121"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18122"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SettingHeaderView" customModule="Depo_LifeTech" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SettingHeaderView" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="14"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dT6-JG-J0F">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
-                    <color key="backgroundColor" red="0.59215686274509804" green="0.59215686274509804" blue="0.59215686274509804" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" name="darkBorder"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="weO-Tg-wIw"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fzp-vs-7OY">
                     <rect key="frame" x="0.0" y="13" width="375" height="1"/>
-                    <color key="backgroundColor" red="0.59215686274509804" green="0.59215686274509804" blue="0.59215686274509804" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" name="darkBorder"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="hQL-xe-1s2"/>
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="0.84705882352941175" green="0.84705882352941175" blue="0.84705882352941175" alpha="0.29654489436619719" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" name="settingsSeperatorColor"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="Fzp-vs-7OY" secondAttribute="trailing" id="1kI-bB-KjQ"/>
                 <constraint firstItem="dT6-JG-J0F" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="XWp-K6-BY1"/>
@@ -44,4 +43,12 @@
             <point key="canvasLocation" x="32.5" y="-248.5"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="darkBorder">
+            <color red="0.59215700626373291" green="0.59215700626373291" blue="0.59215700626373291" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="settingsSeperatorColor">
+            <color red="0.84705882352941175" green="0.84705882352941175" blue="0.84705882352941175" alpha="0.30000001192092896" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
